# Inventory

./: .gitignore  index.html  package-lock.json  package.json  server.cjs  vite.config.ts  测试.xlsx
.claude/: settings.json
scripts/: com.inventory.app.plist  deploy.sh  setup-startup.bat  setup-startup.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: embedded.rs  http_server.rs  lib.rs  main.rs  store.rs
src/api/: index.ts
src/components/: DataActions.tsx  Layout.tsx
src/hooks/: usePageSize.ts
src/pages/: AccountManagement.tsx  BackupManagement.tsx  DepartmentManagement.tsx  FixedAssetManagement.tsx  InventoryManagement.tsx  LedgerPage.tsx  LoginPage.tsx  OperatorManagement.tsx  ProductManagement.tsx  Reports.tsx
src/types/: index.ts
