[package]
name = "inventory-app"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
hostname = "0.4"
tiny_http = "0.12"
local-ip-address = "0.6"
rust-embed = "8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
